[tool.poetry]
name = "sql2sheets"
version = "0.1.0"
description = "Connect and schedule sql queries to be dumped in google sheets."
authors = ["ablacklama <ablacklama@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
sql2sheets = "sql2sheets.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.3.2"
SQLAlchemy = "^1.3.22"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
